[tool.poetry]
name = "apodgbss"
version = "0.2.1"
description = "This is the NASA Astronomical Picture of the Day (APOD) Gnome Background Setter (GBSS) module."
authors = ["ccdale <chris.charles.allison+apodgbss@gmail.com>"]
readme = "README.md"
packages = [{include = "apodgbss", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
ccalogging = "^0.4.4"

[tool.poetry.scripts]
apodgbss = "apodgbss.module:goBabe"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
